improve code quality (using toList instead of Collectors)